2023-12-29 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow reading of null values in array-type data, resolves #309
    * Release version 7.2.0

2023-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Improve look of backend modules in TYPO3 12
    * Remove access restriction on main module, resolves #308
    * Allow skipping records in StoreDataStep, resolves #310

2023-10-20 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow nullable values to be stored as null, resolves #302
    * Fix error message when there is an SQL error, resolves #297 (thanks to Lina Wolf)
    * Various documentation improvements (thanks to Lina Wolf)
    * Release version 7.1.2

2023-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Harden table title view helper against missing table title, resolves #299
    * Add note about typo3/cms-reactions dependency, references #298

2023-09-17 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix compatibility with PHP 7.4, resolves #296
    * Release version 7.1.1

2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow explicit ordering of columns for processing, resolves #255
    * Verify compatibility with PHP 8.2
    * Release version 7.1.0

2023-08-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Hint at the possibility of combining additional fields and substructure fields for transformations, resolves #292
    * Allow for wildcard without condition in arrayPath property, resolves #291
    * Allow to set fixed value at column configuration-level, resolves #293

2023-07-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Make it possible to download imported data during preview runs, resolves #289

2023-07-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Let Scheduler task succeed on warnings for all/grouped tables (thanks to Mathias Brodala)

2023-05-05 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Release version 7.0.0
